--- a/7-Event Handiling/Index.html
+++ b/7-Event Handiling/Index.html
@@ -7,13 +7,16 @@
     <title>Events</title>
 </head>
 <body>
+    <h1>Hello Events!!</h1>
     <div class="btn">
+        <input type="text">
         <!-- <Button id="btn-1" onclick="allClear()">Click Here!</Button> -->
         <Button id="btn-1">Click Here!</Button>
     </div>
     <div class="img">
         <img src="lens_icon2.png" alt="Scanner" width="50px">
     </div>
+    <a href="http://google.com">Google</a>
     <script src="script.js"></script>
 </body>
 </html>
