--- a/7-Event Handiling/Index.html
+++ b/7-Event Handiling/Index.html
@@ -3,20 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
 </head>
+<style>
+    .col{
+        border: 2px solid black;
+        width: 10%;
+        height: 10em;
+        margin: 2em;
+    }
+    nav{
+        background-color: orange;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+    body{
+        display: flex;
+        flex-direction: column;
+        padding: 80px;
+    }
+</style>
 <body>
-    <h1>Hello Events!!</h1>
-    <div class="btn">
+    <h2>Hello Events!!</h2>
+
+    <!-- <div class="btn">
         <input type="text">
-        <!-- <Button id="btn-1" onclick="allClear()">Click Here!</Button> -->
+        <Button id="btn-1" onclick="allClear()">Click Here!</Button>
         <Button id="btn-1">Click Here!</Button>
     </div>
     <div class="img">
         <img src="lens_icon2.png" alt="Scanner" width="50px">
     </div>
     <a href="http://google.com">Google</a>
+     -->
+    <!-- <div class="all">
+        <h1>Key</h1>
+      <div class="container">
+        <div class="row row-cols">
+          <div class="col-1">
+            <nav>Event Key</nav>
+            <h1 col-1>Key</h1>
+          </div>
+          <div class="col-2">
+            <nav>Event Location</nav>
+            <h1 col-1>key</h1>
+         </div>
+          <div class="col-3">
+            <nav>Event code</nav>
+            <h1 col-1>key</h1>
+          </div>
+          <div class="col">
+            <nav>Meta Key</nav>
+            <h1 col-1>key</h1>
+          </div>
+          <div class="col">
+            <nav>event which</nav>
+            <h1 col-1>key</h1>
+          </div>
+          <div class="col">
+            <nav>Description</nav>
+            <h1 col-1>key</h1>
+          </div>
+        </div>
+      </div>
+    </div> -->
+
+    <input type="text" class="form-input" placeholder="Enter Input">
+    <input type="checkbox" name="" id="checkbox">
+    <select name="priority" id="priority-input">
+        <option value="0">Select Priority</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+
+    </select>
     <script src="script.js"></script>
 </body>
 </html>
